upgrade to .net 8.0

--- a/Tweetbook/appsettings.json
+++ b/Tweetbook/appsettings.json
@@ -2,6 +2,7 @@
   "ConnectionStrings": {
     "DefaultConnection": "Server=(localdb)\\mssqllocaldb;Database=aspnet-Tweetbook-09E172F4-365F-44F9-83C0-987C78157F5D;Trusted_Connection=True;MultipleActiveResultSets=true"
     //"DefaultConnection": "Server=db-server;Database=Tweetbook;User=sa;Password=SomeGreatPassword1234_"
+    //"DefaultConnection": "Server=localhost;Database=Tweetbook;User=sa;Password=SomeGreatPassword1234_"
   },
   "CosmosSettings": {
     "DatabaseName": "tweetbook",
