Blazor Server Render Mode in .NET 8

--- a/Tweetbook/Tweetbook.csproj
+++ b/Tweetbook/Tweetbook.csproj
@@ -30,6 +30,7 @@
   </ItemGroup>
   <ItemGroup>
     <Folder Include="SwaggerExamples\Requests\" />
+    <Folder Include="TestResults\" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\Tweetbook.Contracts\Tweetbook.Contracts.csproj" />
